added business rec

--- a/notebooks/data_analysis_jayla.ipynb
+++ b/notebooks/data_analysis_jayla.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -386,13 +386,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/p9/l56kxrqj1f50k63kvkm8k0nm0000gp/T/ipykernel_28475/1651062515.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/p9/l56kxrqj1f50k63kvkm8k0nm0000gp/T/ipykernel_53696/1651062515.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_2018['total_revenue'] = data_2018['domestic_gross'] + data_2018['foreign_gross']\n",
-      "/var/folders/p9/l56kxrqj1f50k63kvkm8k0nm0000gp/T/ipykernel_28475/1651062515.py:19: SettingWithCopyWarning: \n",
+      "/var/folders/p9/l56kxrqj1f50k63kvkm8k0nm0000gp/T/ipykernel_53696/1651062515.py:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -448,6 +448,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Movies that are part of a franchise (e.g., Deadpool, Avengers, Jurassic Park) generally outperform non-franchise films.\n",
+    "- Franchise films consistently bring in higher revenue, indicating the strong power of brand recognition and audience loyalty.\n",
+    "\n",
+    "Developing franchises is a key strategy for maximizing long-term revenue. Studios should continue to invest in building and expanding franchises to capitalize on the momentum of successful series."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5.2 Director vs Studio Loyalty Analysis using a T-test\n",
     "\n",
     "Hypothesis Testing:\n",
@@ -461,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +485,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/p9/l56kxrqj1f50k63kvkm8k0nm0000gp/T/ipykernel_28475/2772400245.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/p9/l56kxrqj1f50k63kvkm8k0nm0000gp/T/ipykernel_53696/2772400245.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -513,6 +523,28 @@
    "source": [
     "![Sheet 8.png](<attachment:Sheet 8.png>)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A T-test comparing revenue from movies directed by loyal directors (e.g., Joe and Anthony Russo at BV) versus other directors produced a T-statistic of 2.63 and a P-value of 0.0086.\n",
+    "- Since the P-value < 0.05, we reject the null hypothesis, indicating that loyalty to specific directors has a statistically significant impact on a studio’s revenue. Studios that frequently collaborate with high-performing directors tend to see greater financial returns.\n",
+    "\n",
+    "Studios should prioritize maintaining long-term relationships with successful directors. By fostering loyalty and consistency, studios can boost their chances of producing box-office hits."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Business Recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
