--- a/notebooks/data_analysis_jayla.ipynb
+++ b/notebooks/data_analysis_jayla.ipynb
@@ -544,7 +544,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Prioritize Adventure and Action Genres: Studios should invest heavily in Adventure and Action movies, particularly when these genres are combined with Sci-Fi, Fantasy, and Animation. These genres consistently produce the highest box office revenues and appeal to a wide audience.\n",
+    "\n",
+    "2. Focus on Franchise Development: Franchises are a proven strategy for maximizing box office success. New and established studios alike should consider developing or expanding on movie series to build long-term financial success.\n",
+    "\n",
+    "3. Leverage Proven Directors: Studios should foster long-term relationships with proven directors who have a history of box office success. Directors like the Russo Brothers have shown that consistency and loyalty between studio and director result in significantly higher revenue.\n",
+    "\n",
+    "4. Global Appeal is Critical: With certain films (e.g., Aquaman) demonstrating stronger performance internationally, studios should prioritize movies with global appeal to maximize both domestic and foreign gross.\n",
+    "\n",
+    "5. Data-Driven Decision Making: Studios should continue leveraging data and analytics to inform decisions around director loyalty, genre investments, and franchise development."
+   ]
   }
  ],
  "metadata": {
